# task1

./: README (copy 1).md  docker-compose.yaml  main.py  nginx.conf  pyproject.toml
backend/: .env  .env_example  .flake8  Habit_fixture.json  dump.rdb  pyproject.toml
backend/config/: permissions.py  settings.py  urls.py
backend/docker/celery/beat/: start
backend/docker/celery/worker/: start
backend/docker/django/: Dockerfile  start
backend/habit_tracker/: admin.py  models.py  serializer.py  task.py  tasks.py  tests.py  urls.py  validators.py  views.py
backend/telegram_bot/: services.py
backend/telegram_bot/management/commands/: telega.py
backend/users/: admin.py  models.py  serializer.py  urls.py  views.py
backend/users/management/commands/: add_user.py
data_test/: Habit_fixture.json  User_fixture.json
redisdata/: dump.rdb
